--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mr {
+  margin-right: 10px;
+}
+
+.searchForm {
+  padding-right: 50px;
+}
+
+.searchTable {
+  margin-left: 20px;
+  border: 1px solid grey;
+  height: 75px;
+  width: 1000px;
+}
